--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div id="container--main">
 
             <section id="wrapper--hero" class="section--page">
-                <img id="profile-pic" src="/Users/entorryxxx/Desktop/resume file/assets/images/Г.Энхзул.JPEG">
+                <img id="profile-pic" src="./assets/Г.Энхзул.JPEG">
 
                 <div>
                     <h1 id="user-name">Ганбат Энхзул</h1>
