--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div id="container--main">
 
             <section id="wrapper--hero" class="section--page">
-                <img id="profile-pic" src="./assets/Г.Энхзул.JPEG">
+                <img id="profile-pic" src="./assets/images/Г.Энхзул.JPEG">
 
                 <div>
                     <h1 id="user-name">Ганбат Энхзул</h1>
@@ -232,7 +232,7 @@
     <div class="card--work-history">
         <strong>Зураг зурах</strong>
         <ul>
-            <a href="/Users/entorryxxx/Desktop/resume file/assets/images/IMG_1011.jpg" target="_blank">Digital art</a>
+            <a href="./assets/images/IMG_1011.jpg" target="_blank">Digital art</a>
             <a href="" target="_blank">Portrait</a>
         </ul>
     </div>
