--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
                 <div>
                     <h1 id="user-name">Ганбат Энхзул</h1>
                     <p id="bio"> Миний бие СЭЗИС-ийн Эдийн засгийн өдрийн хөтөлбөрийг амжилттай суралцаж төгссөн. Суралцах хугацаандаа эрдэм шинжилгээний хурлуудад амжилттай оролцож, дотоодын 3 тэтгэлэгт хөтөлбөрт хамрагдаж үеийн 
-                        мундаг найзуудын төлөөллүүд болох Бадраа сан болон ACI оюутны клубуудэд гишүүнээс тэргүүн болтлоо ахин дэвшсэн бөгөөд тасралтгүй суралцаж хамтдаа хөгжих хүсэл эрмэлзэлтэй билээ.  
+                        мундаг найзуудын төлөөллүүд болох Бадраа сан болон ACI оюутны клубүүдэд гишүүнээс тэргүүн болтлоо ахин дэвшсэн бөгөөд тасралтгүй суралцаж хамтдаа хөгжих хүсэл эрмэлзэлтэй билээ.  
                         Оюутан байх хугацаандаа багаар ажиллах, бие даан суралцах, олон нийтэд илтгэл танилцуулах, өгөгдлийн шинжилгээ хийх гэх зэрэг олон талын мэдлэг, ур чадварыг танхимын багш нараасаа суралцсан. 
                     <p>Монгол Улсын Сангийн яамны Эрдэм шинжилгээний хуралд <a href="https://www.facebook.com/share/p/tY1oiULy6xBoyYKs/" target="_blank">тэргүүн байр</a>
                     <br>Монгол Улсын Сангийн яамнаас зохион байгуулсан 'Нээлттэй төсөв' өгөгдлийн тэмцээнд <a href="https://unread.today/c/openbudget-topteams?fbclid=IwZXh0bgNhZW0CMTEAAR31ue-I4AoaWWHMQ1j9WgTmni_3I4668u80l4HGKq6gmQdnRLteWz9WvvQ_aem_ZmFrZWR1bW15MTZieXRlcw" target="_blank">тэргүүн байр</a>
-                    <br>Шудрага ёсыг бадраах сангийн тэтгэлэгт оюутан /2021-2024/
+                    <br>Шударга ёсыг бадраах сангийн тэтгэлэгт оюутан /2021-2024/
                     <br>Голомт банкны тэтгэлэгт оюутан /2022/
                     <br>Монголын санхүүчдын холбооны дэргэдэх ACI students' club - Тэргүүн
 
@@ -137,34 +137,34 @@
                 </div>
 
                 <div class="card--project">
-                    <a href=""><span>🏆 </span>Монгол банкны эрдэм шинжилгээний хурал - Шилдэг 5 судалгааны нэгээр шалгарав (2023 он)</a>
+                    <a href="project1.html"><span>🏆 </span>Монгол банкны эрдэм шинжилгээний хурал - Шилдэг 5 судалгааны нэгээр шалгарав (2023 он)</a>
                 </div>
                 <div class="card--project">
-                    <a href=""><span>🏆 </span>Шудрага ёсыг бадраах Бадраа сангийн тэтгэлэгт оюутан (2022 оноос хойш)</a>
+                    <a href="project1.html"><span>🏆 </span>Шудрага ёсыг бадраах Бадраа сангийн тэтгэлэгт оюутан (2022 оноос хойш)</a>
                 </div>        
                 <div class="card--project">
-                    <a href=""><span>🏆 </span>Голомт банкны тэтгэлэгт оюутан (2023 он)</a>
+                    <a href="project1.html"><span>🏆 </span>Голомт банкны тэтгэлэгт оюутан (2023 он)</a>
                 </div>           
                 <div class="card--project">
-                    <a href=""><span>🏆 </span>“Businnes Case Challenge” тэмцээнийг 250 гаруй оюутнуудын дунд зохион байгуулав (2022 - 2023он)</a>
+                    <a href="project1.html"><span>🏆 </span>“Businnes Case Challenge” тэмцээнийг 250 гаруй оюутнуудын дунд зохион байгуулав (2022 - 2023он)</a>
                 </div>   
                 <div class="card--project">
-                    <a href=""><span>🏆 </span>“Global Youth Enterpreneurship 2022” улсын тэмцээн - Дэд байр (2022 он)</a>
+                    <a href="project1.html"><span>🏆 </span>“Global Youth Enterpreneurship 2022” улсын тэмцээн - Дэд байр (2022 он)</a>
                 </div>   
                 <div class="card--project">
-                    <a href=""><span>🏆 </span>“Эртний сургаалаас суралцъя” улсын эсээ бичлэг, реалити шоу уралдаан – Дэд байр (2020 он)</a>
+                    <a href="project1.html"><span>🏆 </span>“Эртний сургаалаас суралцъя” улсын эсээ бичлэг, реалити шоу уралдаан – Дэд байр (2020 он)</a>
                 </div>   
                 <div class="card--project">
-                    <a href=""><span>🏆 </span>Нийслэлийн математикийн олимпиад – Тусгай байр (2019 он)</a>
+                    <a href="project1.html"><span>🏆 </span>Нийслэлийн математикийн олимпиад – Тусгай байр (2019 он)</a>
                 </div>   
                 <div class="card--project">
-                    <a href=""><span>🏆 </span>“Математик цаг” улсын олимпиад - Дэд байр (2019 он)</a>
+                    <a href="project1.html"><span>🏆 </span>“Математик цаг” улсын олимпиад - Дэд байр (2019 он)</a>
                 </div>   
                 <div class="card--project">
-                    <a href=""><span>🏆 </span>“Шилдэг бизнес төсөл” төслийн уралдаан - Тэргүүн байр (2019 он)</a>
+                    <a href="project1.html"><span>🏆 </span>“Шилдэг бизнес төсөл” төслийн уралдаан - Тэргүүн байр (2019 он)</a>
                 </div>   
                 <div class="card--project">
-                    <a href=""><span>🏆 </span>БҮХ ШАГНАЛУУД...</a>
+                    <a href="project1.html"><span>🏆 </span>БҮХ ШАГНАЛУУД...</a>
                 </div>   
 
             </section>
@@ -188,7 +188,7 @@
                 </ul>
             </div>
             <div class="card--work-history">
-                <strong>АНГЛИ ХЭЛ (ABCOLUTE)</strong>
+                <strong>АНГЛИ ХЭЛ (ABSOLUTE)</strong>
                 <ul>
                     <li>Ахисан дунд шатнаас IELTS бэлтгэл шат хүртэл суралцав.</li>
                 </ul>
@@ -232,17 +232,18 @@
     <div class="card--work-history">
         <strong>Зураг зурах</strong>
         <ul>
-            <a href="./assets/images/IMG_1011.jpg" target="_blank">Digital art</a>
-            <a href="" target="_blank">Portrait</a>
+            <a href="./assets/images/IMG_1011.jpg" target="_blank">Digital art, Portrait, Canvas</a>
+           
         </ul>
     </div>
     <div class="card--work-history">
         <strong>Балет</strong>
-
+            <li>Оюутан байх хугацаандаа олон цагаар номын санд сууж хичээлээ хийх явдал их байдаг тул бие хөших, таргалах зэрэг өвчнөөс сунгалттай дасгалуудыг балетаар
+            хичээллэсэнээр сэргийлэх боломжтой болдог. Миний хувьд одоогоор A, B суултаар сууж чаддаг болсондоо өөрөөрөө бахархдаг.  </li>
     </div>
     <div class="card--work-history">
         <strong>Сагсан бөмбөг</strong>
-        <ul>
+        <ul> Дунд сургуульд байхдаа сургуулийн шигшээ багт сагсны дугуйланд явдаг байсан. Дүүргийн мөнгөн медаль болон сургуулийн аварга болж байсан удаатай. 
         </ul>
     </div>
 
