--- a/index.html
+++ b/index.html
@@ -243,8 +243,8 @@
     </div>
     <div class="card--work-history">
         <strong>Сагсан бөмбөг</strong>
-        <ul> Дунд сургуульд байхдаа сургуулийн шигшээ багт сагсны дугуйланд явдаг байсан. Дүүргийн мөнгөн медаль болон сургуулийн аварга болж байсан удаатай. 
-        </ul>
+            <li> Дунд сургуульд байхдаа сургуулийн шигшээ багт сагсны дугуйланд явдаг байсан. Дүүргийн мөнгөн медаль болон сургуулийн аварга болж байсан удаатай. 
+            </li>
     </div>
 
 
