--- a/index.html
+++ b/index.html
@@ -82,9 +82,9 @@
                     <p><strong>Тайлан бичих:</strong> Collective болон Billing cycle-н нөхцөл байдал болон гүйцэтгэлд тулгуурлан тайлан бэлтгэж захирал болон менежерүүдэд 7 хоног бүр мэдэгдэв.</p>
 
 
-                    <p><strong>Дата цэвэрлэгээ:</strong> Дата аналист мэргэжлээр их өгөгдөл дээр ажиллаж 2-3 сая мөр өгөгдлөөс ашиглах датагаа SQL код бичиж цэвэрлэв. <a href="https://www.youtube.com/appwrite" target="_blank">Youtube channel</a>, <a href="https://appwrite.io/blog/author/dennis-ivy" target="_blank">articles</a>, & <a href="https://www.youtube.com/live/VJvawxeUhN4">community events</a></p>
+                    <p><strong>Дата цэвэрлэгээ:</strong> Дата аналист мэргэжлээр их өгөгдөл дээр ажиллаж 2-3 сая мөр өгөгдлөөс ашиглах датагаа SQL код бичиж цэвэрлэв. </p>
 
-                    <strong>[Progress since 9/2023]</strong>
+                    
 
                 </div>
 
